:bug: Stylefix link animation (avoid wrap)

--- a/src/styles/3-components/link/_link.scss
+++ b/src/styles/3-components/link/_link.scss
@@ -4,4 +4,5 @@ a {
   margin-inline: -2px;
   padding-inline: 2px;
   transition: box-shadow 200ms ease-in-out;
+  white-space: nowrap; // needed to show animation correctly
 }
